--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="intro-screen" class="intro-screen">
+        <h1>Are you ready?</h1>
+        <button id="start-btn">Yes</button>
+    </div>
     <div class="quiz-container">
         <div id="quiz-header" class="quiz-header">
             <h1>The Hubby Quiz</h1>
