--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Are you ready?</h1>
         <button id="start-btn">Yes</button>
     </div>
-    <div class="quiz-container hidden">
+    <div class="quiz-container">
         <div id="quiz-header" class="quiz-header">
             <h1>The Hubby Quiz</h1>
             <p>Are you cooked?😈😈😈 Or cooking😎😎😎</p>
